[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"
authors = ["Minnakhmetov Almaz"]
description = "Todo cli/tui app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "cargo", "string"] }
dirs = "5"
colored = "2"
config = "0.14"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
uuid = { version = "1.7", features = ["v4"] }

